<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhySoSerious?</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="settings_general">General app settings:</string>
    <string name="settings_splash">Splash screen on startup</string>
    <string name="settings_randomize">Random joke on startup</string>
    <string name="settings_ellipsize">Ellipsize (&#8230;) long jokes</string>
    
    <string name="settings_categories">Use joke category in search:</string>
    <string name="settings_category1">category1</string>
    <string name="settings_category2">category2</string>
    <string name="settings_category3">category3</string>
    
    <string name="settings_update">Update</string>
    <string name="settings_reset">Reset</string>
    
    <string name="settings_toggle_on">Yes</string>
    <string name="settings_toggle_off">No</string>
    
    
    <string name="about_team">Team Viking</string>
    <string name="about_author1">Christopher Reid</string>
    <string name="about_author2">Alessandro Rodi</string>
    <string name="about_author3">Sandro Victoria-Arena</string>
    
    <string name="addjoke">Add Joke</string>
    <string name="addjoke_category">Category</string>
    <string name="addjoke_sub_category">Sub-Category</string>
    <string name="addjoke_short_desc">Joke Short Description</string>
    <string name="addjoke_short_question">Question (Type 1 Only)</string>
    <string name="addjoke_short_answer">Answer (Type 1 Only)</string>
    <string name="addjoke_short_monologue">Monologue Text (Type 2 Only)</string>
    <string name="addjoke_reset">Reset</string>
    
    <string name="editjoke">Update Joke</string>
    <string name="editjoke_id">Joke ID</string>
    <string name="editjoke_category">Category</string>
    <string name="editjoke_sub_category">Sub-Category</string>
    <string name="editjoke_short_desc">Joke Short Description</string>
    <string name="editjoke_short_question">Question (Type 1 Only)</string>
    <string name="editjoke_short_answer">Answer (Type 1 Only)</string>
    <string name="editjoke_short_monologue">Monologue Text (Type 2 Only)</string>
    <string name="editjoke_reset">Reset</string>
    
    <string name="monologue_next_Line">Click to display next Line</string>
    
    <string name="questionanswer_display_answer">Press to Display the Answer.</string>
    
    <string name="databasestatus_status">Database Status</string>
    <string name="databasestatus_first">Date first joke was added:</string>
    <string name="databasestatus_last">Date last joke was added:</string>
    <string name="databasestatus_categories">Categories:</string>

    <string name="main_addjoke">Add Joke</string>
    <string name="main_dbstatus">DB Status</string>
    <string name="addjoke_jokeType">Joke Type</string>
    <string name="questionAndAnswerTopic">Question &amp; Answer</string>
    <string name="monologueTopic">Monologue</string>
    
    <string name="geeklabel">Geek category</string>
    <string name="holidayLabel">Holiday category</string>
    <string name="kidsLabel">Kids category</string>
    <string name="horrorLabel">Horror category</string>
	<string name="schoolLabel">School category</string>
</resources>
