<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/databasestatus_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/databasestatus_status"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/databasestatus_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/databasestatus_first"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/databasestatus_firstdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/databasestatus_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/databasestatus_last"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/databasestatus_lastdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

    <TextView
        android:id="@+id/databasestatus_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/databasestatus_categories"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/geekCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/geeklabel" />

    <TextView
        android:id="@+id/geekNbOfJokesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:id="@+id/holidayCateghoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/holidayLabel" />

    <TextView
        android:id="@+id/holidayNbOfJokesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:id="@+id/kidsCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kidsLabel" />

    <TextView
        android:id="@+id/kidsNbOfJokesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:id="@+id/horrorCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/horrorLabel" />

    <TextView
        android:id="@+id/horrorNbOfJokesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:id="@+id/schoolCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/schoolLabel" />

    <TextView
        android:id="@+id/schoolNbOfJokesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

</LinearLayout>