<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:orientation="vertical"
	    android:layout_alignParentTop="true" >
        
        <!-- General App Settings -->
    
	    <TextView
	        android:id="@+id/settings_general"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/settings_general" />
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_splash"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_splash" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_splash_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="true" />
	        
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_randomize"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_randomize" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_randomize_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="false" />
	        
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_ellipsize"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_ellipsize" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_ellipsize_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="false" />
	        
	    </RelativeLayout>
	    
	    
	    
	    <!-- Joke Category Settings -->
	    
	    <TextView
	        android:id="@+id/settings_categories"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/settings_categories" />
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_category1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_category1" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_category1_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="true" />
	
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_category2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_category2" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_category2_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="true" />
	
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	        
	        
		    <TextView 
		        android:id="@+id/settings_category3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
	        	android:paddingLeft="10dp"
				android:text="@string/settings_category3" />
		    
		    <ToggleButton 
		        android:id="@+id/settings_category3_toggle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:textOn="@string/settings_toggle_on" 
		        android:textOff="@string/settings_toggle_off"
		        android:checked="true" />
	
	    </RelativeLayout>
    
    </LinearLayout>
    
    
    
    <!-- Update/Reset Settings -->
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        
        <Button
	        android:id="@+id/settings_update_button"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/settings_update" />
	    
	    <Button
	        android:id="@+id/settings_reset_button"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/settings_reset" />
    </LinearLayout>
    
    

</RelativeLayout>
